<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/background"
>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linear1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
    >
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_weight="1"
                android:id="@+id/edit_message"
                android:hint="@string/edit_message"
                android:importantForAutofill="no"
        >
            <requestFocus/>
        </EditText>
        <Button
                android:text="@string/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_weight="1"
        />
    </LinearLayout>
    <FrameLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageFrameLayout"
            android:layout_below="@id/linear1"
            android:layout_above="@id/sourceLayout"
            android:layout_marginBottom="5dp">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/image"
                android:id="@+id/imageView"
                android:contentDescription="@string/imageDesc"
        />
    </FrameLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/sourceLayout"
            android:layout_marginBottom="5dp"
            android:layout_above="@+id/buttonsLayout"
    >
        <TextView
                android:text="@string/imageSource"
                android:layout_width="410dp"
                android:layout_height="match_parent"
                android:id="@+id/linkView"
                android:gravity="center"
                android:autoLink="web"
        />
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/web_asset_black"
                android:id="@+id/openButton"
                android:layout_toEndOf="@+id/linkView"
                android:layout_marginStart="0dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/openButtonDesc"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:id="@+id/buttonsLayout"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp">
        <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/thumb_up_black"
                android:id="@+id/thumbUpButton"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/like"
        />
        <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/thumb_down_black"
                android:id="@+id/thumbDownButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/dislike"
        />
    </RelativeLayout>
</RelativeLayout>
